fix(style): max width on body to prevent overflow

--- a/app/sass/base/_base.scss
+++ b/app/sass/base/_base.scss
@@ -1,6 +1,7 @@
 html, body {
     width: 100vw;
     height: 100vh;
+    max-width: 100%;
     position: relative;
     font-family: $ave;
     -webkit-font-smoothing: antialiased;
